# clipforge

./: .eslintrc.cjs  .gitignore  .prettierrc  AI_CAPTIONS_README.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
.cursor/commands/: speckit.plan.md
.cursor/rules/: specify-rules.mdc
.docs/: E2E_AUTOMATED_READY.md  E2E_SUMMARY.md  E2E_TESTS_READY.md  E2E_TEST_FIXES.md  E2E_WEB_VS_DESKTOP.md  QUICK_START_TESTING.md  TESTING_FINAL_SUMMARY.md  TEST_GUIDE.md  TEST_IMPLEMENTATION_SUMMARY.md
.docs/status/: PHASE3_US1_COMPLETE.md  PROXY_GENERATION_COMPLETE.md
.github/workflows/: ci.yml
.specify/memory/: constitution.md
specs/001-clipforge/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: App.svelte  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/docs/: AI_CAPTIONS_IMPLEMENTATION.md  WHISPER_SETUP.md
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/ai/: mod.rs  whisper.rs
src-tauri/src/commands/: captions.rs  export.rs  media.rs  mod.rs  playback.rs  project.rs  recording.rs  timeline.rs
src-tauri/src/ffmpeg/: EXPORT_TESTS.md  audio.rs  export.rs  metadata.rs  mod.rs  proxy.rs  thumbnails.rs
src-tauri/src/models/: caption.rs  clip.rs  export.rs  mod.rs  project.rs  recording.rs  timeline.rs
src-tauri/src/platform/: macos.rs  mod.rs  windows.rs
src-tauri/src/storage/: cache.rs  mod.rs
tests/e2e/: E2E_TEST_GUIDE.md  README.md  manual-timeline-test.md  timeline-multiple-clips.spec.ts
tests/fixtures/: README.md
(+28 files in other folders)
