[package]
name = "clipforge"
version = "0.1.0"
description = "A desktop video editor built with Tauri"
authors = ["ClipForge Team"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "protocol-asset", "dialog-all", "fs-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
rusqlite = { version = "0.30", features = ["bundled"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
urlencoding = "2.1"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

# Windows screen capture dependencies - will be configured when implementing recording features
# [target.'cfg(target_os = "windows")'.dependencies]
# windows = { version = "0.52", features = ["Graphics_Capture", "Media_MediaCapture"] }

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

